experimentData/CFR-detailedExperimentData/errorSamples/recompilationFailures/681/final-681/tmp/cfr/tmp/output.txt
Test.java:14: error: variable bl might not have been initialized
            if (!bl) continue;
                 ^
1 error
